# Qwen3.6-35B-A3B-Prune-Tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: data_sources.yaml  example.yaml
moe_prune_distill/: __init__.py  config.py
moe_prune_distill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
moe_prune_distill/adapters/: __init__.py  base.py  qwen_moe.py
moe_prune_distill/data/: __init__.py  collator.py  dataset.py  schema.py  sources.py  vl_processor.py
moe_prune_distill/distill/: __init__.py  dataset.py  layer_lora.py  layer_streamer.py  layerwise_trainer.py  losses.py  lr_scheduler.py  metrics.py  muon_triton.py  optimizer.py  rollout_cache.py  router_stats.py  teacher_cache.py  teacher_loader.py  trainer.py
moe_prune_distill/prune/: __init__.py  config_editor.py  expert_merge.py  expert_merge.py.bak  expert_selector.py  slicer.py
moe_prune_distill/utils/: __init__.py  download.py  log_format.py  logging.py  metrics_log.py  tensorboard.py
scripts/: build_train_set.py  cache_teacher.py  collect_router_cooccur.py  collect_router_stats.py  compare_cached_activations.py  download.py  export_gguf.py  inspect.py  prefetch_datasets.py  probe_source.py  prune.py  prune_merge.py  stream_teacher.py  train.py  train_layerwise.py
tests/: test_export_gguf.py  test_layerwise.py  test_layerwise_lora.py  test_log_format.py  test_lr_scheduler.py  test_metrics.py  test_muon_triton.py  test_neuron_merge.py  test_optimizer.py  test_p0.py  test_p1.py  test_streamer.py  test_tensorboard.py
