[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moe-prune-distill"
version = "0.1.0"
description = "MoE prune and distill CLI (P0 MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.20.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "pyyaml>=6.0",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["moe_prune_distill*", "scripts*"]
